removed navlink from footer and changed them to <a> tags to avoid the funky looking alignment of nav links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 /* ---- FOOTER ---- */
 .nav {
     display: flex;
+    align-content: flex-end;
     justify-content: space-around;
     position: fixed;
     bottom: 0;
